# horn2vmt

./: .gitmodules  CMakeLists.txt  README.md  default.nix  flake.nix  main.cc
tools/horn2vmt/: main.cc
